fix: Adjust margin spacing on Select difficulty button to make it inline on tablet view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ button {
 
 @media screen and (max-width: 900px) {
     #return-home {
-        margin-left: 50px;
+        margin-left: 90px;
     }
 
     footer ul li a {
